fixed header spacing

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -8,6 +8,7 @@ a{
 
 li{
 	list-style: none;
+	height: 50px;
 }
 
 ul{
@@ -28,11 +29,11 @@ ul{
 }
 
 .header{
-	height: 200px;
+	height: 150px;
 	background: grey;
 	text-align: center;
 	vertical-align: center;
-	line-height: 100px;
+	line-height: 80px;
 	font-family: "Avenir Next", Roboto, sans-serf; 
 }
 
@@ -43,7 +44,7 @@ ul{
 .header .nav .item{
 	font-size: 20px;
 	display: inline-block;
-	padding: 5px;
+	padding: 0px 5px;
 	float: left;
 }
 
@@ -65,6 +66,7 @@ ul{
 
 .header .title{
 	font-size: 40px;
+	color: white;
 }
 
 .content, .footer{
@@ -74,7 +76,15 @@ ul{
 
 .content{
 	height: 1800px;
+	text-align: center;
+	padding: 20px;
 
+}
+
+.clearfix:after{
+	content: "alex";
+	visibility: hidden;
+	clear: both;
 }
 
 .footer{
